# DEAL

./: .gitignore  CMakeLists.txt  DEAL.md  DEAL_MODEL_ROADMAP.md  LICENSE  README.md  environment-deal.yml  pyproject.toml
.github/workflows/: ci.yml
deal/: __init__.py  chemiscope_cli.py  cli.py  config.py  core.py  mask_cli.py  model.py  preprocessing.py  runtime.py  utils.py
deal/sgp/: _C_flare.py  _C_sgp.py  __init__.py  atoms.py  calculator.py  sparse_gp.py  utils.py
examples/: README.md  example_input.yaml
examples/1_activelearning_N2/c_selection/: input.yaml
examples/1_n2_with_preselection/: README.md  input.yaml
examples/2_formate_without_preselection/: README.md  input.yaml
examples/2_subsampling_formate/: README.md  formate-subsampling.ipynb  input.yaml
examples/4_incremental_selection/: README.md  incremental_DEAL.py
examples/old/: README.md  example_input.yaml
examples/old/1_activelearning_N2/c_selection/: input.yaml
examples/old/2_subsampling_formate/: README.md  formate-subsampling.ipynb  input.yaml
examples/old/2_subsampling_formate/a_input/: get_data.sh
examples/old/3_preselection/: README.md
examples/old/4_incremental_selection/: README.md  incremental_DEAL.py
native/src/: ace_binding.cpp
native/src/flare_pp/: structure.cpp  structure.h
native/src/flare_pp/bffs/: sparse_gp.cpp  sparse_gp.h
native/src/flare_pp/descriptors/: b2.cpp  b2.h
npj_supporting_data/: README.md
npj_supporting_data/configs/deal/: README.md
npj_supporting_data/configs/flare/: README.md
npj_supporting_data/mlputils/mace/: README.md  mace_uncertainty.py
npj_supporting_data/notebooks/2_convergence/: ii_deal-active-learning.ipynb
tests/: run_all.sh
tests/cli/: run.sh
tests/preprocessing/: run.sh  run_mask.py
tests/python/: run.sh  run_deal.py  test_config.py  test_masked_prediction.py  test_runtime_info.py  test_sgp_atoms.py
tests/yaml/: input.yaml  run.sh
tutorials/: README.md  example_input.yaml
tutorials/1_activelearning_N2/: README.md
tutorials/2_subsampling_formate/: input.yaml
tutorials/3_preselection/: README.md
tutorials/4_incremental_selection/: README.md
